package POO.Examenes_Ejercicio_16;

public class Profesor {
    private String identificacion;
    private String tipo_id;
    private String nombre;
    private String apellido1;
    private String apellido2;
    private String correo;
    private String telefono;
    
    //Getters and setters
    public String getIdentificacion() {
        return identificacion;
    }
    public void setIdentificacion(String identificacion) {
        this.identificacion = identificacion;
    }
    
    public String getTipo_id() {
        return tipo_id;
    }
    public void setTipo_id(String tipo_id) {
        this.tipo_id = tipo_id;
    }
    
    public String getNombre() {
        return nombre;
    }
    public void setNombre(String nombre) {
        this.nombre = nombre;
    }
    
    public String getApellido1() {
        return apellido1;
    }
    public void setApellido1(String apellido1) {
        this.apellido1 = apellido1;
    }
    
    public String getApellido2() {
        return apellido2;
    }
    public void setApellido2(String apellido2) {
        this.apellido2 = apellido2;
    }
    
    public String getCorreo() {
        return correo;
    }
    public void setCorreo(String correo) {
        this.correo = correo;
    }
    
    public String getTelefono() {
        return telefono;
    }
    public void setTelefono(String telefono) {
        this.telefono = telefono;
    }
}
