package POO.Examenes_Ejercicio_16;

public class ResultadoControlEscrito {
    private Alumno alumno;
    private ControlEscrito controlEscrito;
    private double nota;

    
    public double getNota() {
        return nota;
    }
    public void setNota(double nota) {
        this.nota = nota;
    }
}
