package POO.Examenes_Ejercicio_16;

public class ResultadoPractica {
    private Alumno alumno;
    private Practica practica;
    private double nota;

    //Getter and setter
    public double getNota() {
        return nota;
    }
    public void setNota(double nota) {
        this.nota = nota;
    }
}
