@startuml Examenes
class Alumno {
    String num_matricula;
    String identificacion;
    String tipo_id;
    String nombre;
    String apellido1;
    String apellido2;
    String grupo;
}
class ControlEscrito{
    int id;
    int numero_preguntas;
    LocalDate fecha;
}
class DiseñoPractica {
    List<Profesor> autor;
    Practica practica;
    LocalDate fecha;
}
class Practica {
    int id;
    String titulo;
    String dificultad;
    LocalDate fecha;
    DiseñoPractica dieseñoPractica;
}
class Profesor {
    String identificacion;
    String tipo_id;
    String nombre;
    String apellido1;
    String apellido2;
    String correo;
    String telefono;
}
class ResultadoControlEscrito {
    private Alumno alumno;
    private ControlEscrito controlEscrito;
    private double nota;
}
class ResultadoPractica {
    private Alumno alumno;
    private Practica practica;
    private double nota;
}
DiseñoPractica "1" -- "*" Profesor
ResultadoControlEscrito "1" -- "*" Alumno
ResultadoControlEscrito "*" -- "1" ControlEscrito
Practica "1" -- "*" DiseñoPractica
ResultadoPractica "1" -- "*" Alumno
ResultadoPractica "*" -- "1" Practica
@enduml